log
Mon Mar 15 02:39:40 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:4: error: ‘C’ undeclared (first use in this function)
   *C = a + b;
    ^
exercises.c:15:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
Mon Mar 15 02:39:48 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 10/70
e8b0cf8
Mon Mar 15 02:44:57 UTC 2021: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 20/70
39c5684
